--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     def navigation_version = "2.5.3"
     implementation "androidx.navigation:navigation-fragment-ktx:${navigation_version}"
     implementation "androidx.navigation:navigation-ui-ktx:${navigation_version}"
+//    ViewPager — для организации горизонтально листающихся экранов.
+    implementation'androidx.viewpager2:viewpager2:1.0.0'
 //    hilt for DI (внедрение зависимостей)
     implementation 'com.google.dagger:hilt-android:2.44.2'
     kapt 'com.google.dagger:hilt-compiler:2.44.2'
