--- a/settings.gradle
+++ b/settings.gradle
@@ -18,6 +18,6 @@ include ':domain'
 include ':data'
 include ':core'
 include ':feature-auth'
-include ':data-source'
 include ':feature-sign-in'
 include ':feature-page1'
+include ':feature-profile'
