--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'org.jetbrains.kotlin.kapt'
-    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -51,9 +50,9 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:${navigation_version}"
 //    ViewPager — для организации горизонтально листающихся экранов.
     implementation'androidx.viewpager2:viewpager2:1.0.0'
-//    hilt for DI (внедрение зависимостей)
-    implementation 'com.google.dagger:hilt-android:2.44.2'
-    kapt 'com.google.dagger:hilt-compiler:2.44.2'
+//    Dagger 2 for DI
+    implementation 'com.google.dagger:dagger:2.45'
+    kapt 'com.google.dagger:dagger-compiler:2.45'
 //    Glide for download pictures
     implementation("com.github.bumptech.glide:glide:4.14.2@aar") {
         transitive = true
