--- a/data/build.gradle
+++ b/data/build.gradle
@@ -48,10 +48,9 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-rxjava3:$room_version"
-//    hilt for DI (внедрение зависимостей)
-    def hilt_version = "2.44.2"
-    implementation "com.google.dagger:hilt-android:$hilt_version"
-    kapt "com.google.dagger:hilt-compiler:$hilt_version"
+//    Dagger 2 for DI
+    implementation 'com.google.dagger:dagger:2.45'
+    kapt 'com.google.dagger:dagger-compiler:2.45'
 //    Preferences DataStore (SharedPreferences like APIs)
     def datastore_versiion = "1.0.0"
     implementation "androidx.datastore:datastore-preferences:${datastore_versiion}"
