--- a/feature-page1/build.gradle
+++ b/feature-page1/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-//    Dagger 2
+//    Dagger 2 for DI
     implementation 'com.google.dagger:dagger:2.45'
     kapt 'com.google.dagger:dagger-compiler:2.45'
 //    fragments for viewModels (для работы с фрагментами)
